fixed create api + configurations
